# prompter

./: .gitignore  README.md
backend/: pyproject.toml
backend/prompter/: api.py  cli.py
backend/prompter/core/: models.py  renderer.py  store.py
backend/prompter/data/: hints.json  scaffolds.json
backend/prompter/templates/: backend-engineer.md  blog-writer.md  budget-planning.md  classification.md  code-debugging.md  code-generation.md  code-refactoring.md  code-review.md  comparison.md  contract-review.md  customer-support.md  data-analysis.md  data-analyst.md  editor.md  email-campaign.md  employee-policy-qa.md  financial-analysis.md  financial-report.md  frontend-engineer.md  incident-helper.md  json-extraction.md  legal-research.md  marketing-copywriter.md  observability.md  performance-review.md  policy-drafter.md  prd-writer.md  product-manager.md  proposal-writer.md  qa-assistant.md  recruiter.md  research-assistant.md  sales-outreach.md  seo-content.md  sql-query-helper.md  sre-engineer.md  summarizer.md  translator.md  tutor.md  user-research.md
backend/prompter/tools/: exporters.py
backend/tests/: test_core.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: HintsPanel.tsx  Layout.tsx  PromptEditor.tsx  PromptList.tsx  TemplateLibrary.tsx  UsageGuide.tsx
prompts/: chatgpt-assistant.md  example.md  openai-function-caller.md  providers.yaml
